# bugbuddy

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/python/bug_buddy/: __init__.py  _config.py  _di_container.py  bb.py  integration.py  issue.py  listener.py
src/python/bug_buddy/cli/: _entrypoint.py
